apply plugin: 'com.android.application'

android {
    compileSdkVersion 33

    defaultConfig {
        applicationId "com.crrepa.sdk.sample"
        minSdkVersion 21
        targetSdkVersion 33
        versionCode 3
        versionName "1.0"
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }
    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    namespace 'com.crrepa.sdk.sample'

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    lint {
        baseline = file("lint-baseline.xml")
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    implementation 'androidx.recyclerview:recyclerview:1.3.0'
    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'

    implementation (files("libs/crpblelib-2.0.4-0209.aar"))

    implementation 'com.liulishuo.filedownloader:library:1.7.7'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll([
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
    ])
}
